# TestCPR

./: .gitignore  CMakeLists.txt  README.md  TestCPR.sln
CPRWithCMake/: CMakeLists.txt  CPRWithCMake.h
TestCPR32Bit/: TestCPR32Bit.cpp  TestCPR32Bit.vcxproj  TestCPR32Bit.vcxproj.filters
cpr_with_CMake_solution/: CPRWithCMake.cpp
cpr_with_NuGet_solution/: cpr_with_NuGet_solution.sln
cpr_with_NuGet_solution/Test32BitApp/: Test32BitApp.cpp  Test32BitApp.vcxproj
cpr_with_NuGet_solution/Test_cpr_NuGet/: Test_cpr_NuGet.cpp  Test_cpr_NuGet.vcxproj  Test_cpr_NuGet.vcxproj.filters  packages.config
cpr_with_NuGet_solution/cpr_with_NuGet_solution/: cpr_with_NuGet_solution.sln
cpr_with_NuGet_solution/cpr_with_NuGet_solution/Test32BitApp/: Test32BitApp.cpp  Test32BitApp.vcxproj  Test32BitApp.vcxproj.filters
cpr_with_NuGet_solution/cpr_with_NuGet_solution/Test_cpr_NuGet/: Test_cpr_NuGet.vcxproj
cpr_with_NuGet_solution/cpr_with_vcpkg_solution/: cpr_with_vcpkg_solution.sln  main.cpp
cpr_with_NuGet_solution/cpr_with_vcpkg_solution/Test_vcpkg/: Test_vcpkg.cpp  Test_vcpkg.vcxproj
cpr_with_vcpkg_solution/: cpr_with_vcpkg_solution.sln  main.cpp
cpr_with_vcpkg_solution/Test_vcpkg/: Test_vcpkg.cpp  Test_vcpkg.vcxproj  Test_vcpkg.vcxproj.filters
